Updated depricated method